# tibo-telegram-bot

./: README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  telegram.py  tiz.py
